--- a/cs.html
+++ b/cs.html
@@ -14,6 +14,15 @@
     <span>Loading...</span>
   </div>
 
+  <!-- License Attribution -->
+  <div style="display: flex; justify-content: center; align-items: center; flex-wrap: wrap; gap: 4px; padding: 10px; margin-bottom: 15px; background: #f8f9fa; border: 1px solid #e9ecef; border-radius: 6px; font-size: 12px; color: #666; text-align: center;">
+    <span><a href="https://www.dungeon-world.com/" target="_blank" style="color: #007bff; text-decoration: none;">Dungeon World</a> content by <strong>Sage LaTorra and Adam Koebel</strong></span>
+    <span>•</span>
+    <span> Licensed under<a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" style="color: #007bff;"> CC BY 3.0</a></span>
+    <span>•</span>
+    <span><a href="https://github.com/tznind/dw" target="_blank" style="color: #007bff; text-decoration: none; display: inline-flex; align-items: center;"><img width="12" height="12" alt="GitHub logo" src="https://github.com/user-attachments/assets/d45893e9-0b26-4259-8764-a9737ee1426e" style="margin-right: 3px; background: #000; border-radius: 50%; padding: 1px;" /> Source Code</a></span>
+  </div>
+
   <!-- Validation warning indicator (upper right, subtle) -->
   <button type="button" id="validation-warning" class="validation-warning" style="display: none;" title="Click to view validation errors">
     <span class="warning-icon">⚠️</span>
