--- a/cs.html
+++ b/cs.html
@@ -42,6 +42,11 @@
           <label for="player">Player:</label>
           <input type="text" id="player" name="player">
         </div>
+        
+        <div class="form-field">
+          <label for="look">Look:</label>
+          <input type="text" id="look" name="look" placeholder="Choose e.g. Body, Eyes, Decoration, Clothes">
+        </div>
       </div>
       
       <!-- Role selectors support data-roles attribute to limit which roles appear:
