Add coin and load

--- a/cs.html
+++ b/cs.html
@@ -103,6 +103,17 @@
           Level
           <input type="text" id="level" name="level">
         </label>
+        <label for="coin">
+          Coin
+          <input type="text" id="coin" name="coin">
+        </label>
+        <label for="Load">
+          Load
+          <input type="text" id="load" name="load">
+        </label>
+        <button type="button" class="help-icon"
+        data-help-title="Max Load"
+        data-help-text="Your Max Load is 8+STR">?</button>
       </div>
     
     <!-- UI Control -->
