--- a/data/cards/bonds/card.html
+++ b/data/cards/bonds/card.html
@@ -2,9 +2,12 @@
   <h3 class="card-title">🤝 Bonds</h3>
   <div class="card-content">
     <p class="bonds-instruction">Fill in the name of one of your companions in at least one:</p>
-    <div class="bonds-list">
+    <div id="bonds-list" class="bonds-list">
       <!-- Bonds will be dynamically added here -->
     </div>
-    <button type="button" class="add-bond-btn">+ Add Bond</button>
+    <div class="bonds-buttons">
+      <button type="button" id="add-bond-btn" class="add-bond-btn">+ Add Bond</button>
+      <button type="button" id="load-default-bonds-btn" class="load-default-bonds-btn">Load Defaults</button>
+    </div>
   </div>
 </div>
