Add quest and animal companion moves

--- a/data/cards/signature-weapon/card.html
+++ b/data/cards/signature-weapon/card.html
@@ -1,10 +1,6 @@
 <div class="card signature-weapon-card">
   <h3 class="card-title">⚔️ Signature Weapon</h3>
   <div class="card-content">
-    <p class="weapon-flavor">
-      This is your weapon. There are many like it, but this one is yours. Your weapon is your best friend. It is your life. You master it as you master your life. Your weapon, without you, is useless. Without your weapon, you are useless. You must wield your weapon true.
-    </p>
-
     <!-- Base Description -->
     <div class="form-section">
       <label class="section-label">Choose a base description (all are 2 weight):</label>
@@ -48,37 +44,37 @@
     <div class="form-section">
       <label class="section-label">Choose two enhancements:</label>
       <div class="checkbox-group-columns">
-        <div class="checkbox-option">
-          <input type="checkbox" id="enhancement-hooks" data-hide-if-untaken>
-          <label for="enhancement-hooks" data-hide-if-untaken>Hooks and spikes. +1 damage, but +1 weight.</label>
+        <div class="checkbox-option" data-hide-if-untaken>
+          <input type="checkbox" id="enhancement-hooks">
+          <label for="enhancement-hooks">Hooks and spikes. +1 damage, but +1 weight.</label>
         </div>
-        <div class="checkbox-option">
-          <input type="checkbox" id="enhancement-sharp" data-hide-if-untaken>
-          <label for="enhancement-sharp" data-hide-if-untaken>Sharp. +2 piercing.</label>
+        <div class="checkbox-option" data-hide-if-untaken>
+          <input type="checkbox" id="enhancement-sharp">
+          <label for="enhancement-sharp">Sharp. +2 piercing.</label>
         </div>
-        <div class="checkbox-option">
-          <input type="checkbox" id="enhancement-weighted" data-hide-if-untaken>
-          <label for="enhancement-weighted" data-hide-if-untaken>Perfectly weighted. Add precise.</label>
+        <div class="checkbox-option" data-hide-if-untaken>
+          <input type="checkbox" id="enhancement-weighted">
+          <label for="enhancement-weighted">Perfectly weighted. Add precise.</label>
         </div>
-        <div class="checkbox-option">
-          <input type="checkbox" id="enhancement-serrated" data-hide-if-untaken>
-          <label for="enhancement-serrated" data-hide-if-untaken>Serrated edges. +1 damage.</label>
+        <div class="checkbox-option" data-hide-if-untaken>
+          <input type="checkbox" id="enhancement-serrated">
+          <label for="enhancement-serrated">Serrated edges. +1 damage.</label>
         </div>
-        <div class="checkbox-option">
-          <input type="checkbox" id="enhancement-glows" data-hide-if-untaken>
-          <label for="enhancement-glows" data-hide-if-untaken>Glows in the presence of one type of creature, your choice.</label>
+        <div class="checkbox-option" data-hide-if-untaken>
+          <input type="checkbox" id="enhancement-glows">
+          <label for="enhancement-glows">Glows in the presence of one type of creature, your choice.</label>
         </div>
-        <div class="checkbox-option">
-          <input type="checkbox" id="enhancement-huge" data-hide-if-untaken>
-          <label for="enhancement-huge" data-hide-if-untaken>Huge. Add messy and forceful.</label>
+        <div class="checkbox-option" data-hide-if-untaken>
+          <input type="checkbox" id="enhancement-huge">
+          <label for="enhancement-huge">Huge. Add messy and forceful.</label>
         </div>
-        <div class="checkbox-option">
-          <input type="checkbox" id="enhancement-versatile" data-hide-if-untaken>
-          <label for="enhancement-versatile" data-hide-if-untaken>Versatile. Choose an additional range.</label>
+        <div class="checkbox-option" data-hide-if-untaken>
+          <input type="checkbox" id="enhancement-versatile">
+          <label for="enhancement-versatile">Versatile. Choose an additional range.</label>
         </div>
-        <div class="checkbox-option">
-          <input type="checkbox" id="enhancement-crafted" data-hide-if-untaken>
-          <label for="enhancement-crafted" data-hide-if-untaken>Well-crafted. -1 weight.</label>
+        <div class="checkbox-option" data-hide-if-untaken>
+          <input type="checkbox" id="enhancement-crafted">
+          <label for="enhancement-crafted">Well-crafted. -1 weight.</label>
         </div>
       </div>
     </div>
