add stats for initial load, damage etc

--- a/cs.html
+++ b/cs.html
@@ -165,6 +165,9 @@
 <!-- Layout system -->
 <script src="layout.js"></script>
 
+<!-- Placeholder management -->
+<script src="placeholders.js"></script>
+
 <!-- Main application -->
 <script src="main.js"></script>
 
