Add checkbox for monster

--- a/data/cards/animal-companion/card.html
+++ b/data/cards/animal-companion/card.html
@@ -89,6 +89,10 @@
           <input type="radio" id="base-4" name="companion-base" value="base-4" data-hide-if-untaken>
           <label for="base-4" data-hide-if-untaken>Ferocity +3, Cunning +1, Instinct +2, 1 Armor</label>
         </div>
+        <div class="checkbox-option" data-hide-if-untaken>
+          <input type="checkbox" id="ismonster">
+          <label for="ismonster">Monster* (+2 Ferocity, +1 instinct, plus a new training)</label>
+        </div>
       </div>
     </div>
 
@@ -224,6 +228,6 @@
         </div>
       </div>
     </div>
-
+    * Monster Requires Unnatural Ally
   </div>
 </div>
