--- a/cs.html
+++ b/cs.html
@@ -56,7 +56,7 @@
       <div class="role-controls">
         <label for="role">Class:</label>
         <select id="role" name="role" data-roles="*">
-          <option value="">Select origin...</option>
+          <option value="">Select class...</option>
         </select>       
   <!--
         <label for="role2">Career:</label>
