Add starting gear

--- a/data/cards/equipment/card.html
+++ b/data/cards/equipment/card.html
@@ -1,5 +1,5 @@
 <div class="card equipment-card">
-  <h3 class="card-title">🎒 Equipment</h3>
+  <h3 class="card-title">👜 Equipment</h3>
   <div class="card-content">
     <table id="equipment" data-dynamic-table data-table-max="50">
       <thead>
@@ -20,7 +20,7 @@
     </table>
     <div class="equipment-buttons">
       <button type="button" data-table-add="equipment" class="add-equipment-btn">+ Add Item</button>
-      <button type="button" id="load-default-gear-btn" class="load-default-gear-btn">Load Defaults</button>
+      <button type="button" id="select-starting-gear-btn" class="select-starting-gear-btn">Select Starting Gear</button>
       <button type="button" id="gear-help-btn" class="gear-help-btn" title="Delete items as required for starting gear">?</button>
     </div>
     <div class="equipment-notes-section">
