--- a/cs.html
+++ b/cs.html
@@ -16,7 +16,7 @@
 
   <!-- License Attribution -->
   <div style="display: flex; justify-content: center; align-items: center; flex-wrap: wrap; gap: 4px; padding: 10px; margin-bottom: 15px; background: #f8f9fa; border: 1px solid #e9ecef; border-radius: 6px; font-size: 12px; color: #666; text-align: center;">
-    <span><a href="https://www.dungeon-world.com/" target="_blank" style="color: #007bff; text-decoration: none;">Dungeon World</a> content by <strong>Sage LaTorra and Adam Koebel</strong></span>
+    <span><a href="https://www.dungeon-world.com/" target="_blank" style="color: #007bff; text-decoration: none;">Dungeon World</a> content by <strong>Sage LaTorra and Adam Koebel</strong> design inspired by <strong>Stefan Grambart</strong></span>
     <span>•</span>
     <span> Licensed under<a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" style="color: #007bff;"> CC BY 3.0</a></span>
     <span>•</span>
