--- a/cs.html
+++ b/cs.html
@@ -76,9 +76,9 @@
 
     <hr>
     <div id="stats-container"></div>
-    <hr>
+    <div class="stats-help">Assign these scores to your stats: 16(+2), 15(+1), 13(+1), 12(-), 9(-), 8(-1)</div>
 
-    
+    <hr>
       <!-- Combat and Progression Stats -->
       <div class="all-stats">
         <label for="damage">
