Drag and drop stats

--- a/cs.html
+++ b/cs.html
@@ -75,7 +75,7 @@
     </div>
 
     <div id="stats-container"></div>
-    <div class="stats-help">Assign these scores to your stats: 16(+2), 15(+1), 13(+1), 12(-), 9(-), 8(-1)</div>
+    <div class="stats-help"></div>
 
       <!-- Combat and Progression Stats -->
       <div class="all-stats">
@@ -164,6 +164,9 @@
 
 <!-- Placeholder management -->
 <script src="placeholders.js"></script>
+
+<!-- Stats picker -->
+<script src="stats-picker.js"></script>
 
 <!-- Main application -->
 <script src="main.js"></script>
