Add language selector

--- a/cs-es.html
+++ b/cs-es.html
@@ -21,6 +21,10 @@
     <span> Licenciado bajo<a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" style="color: #007bff;"> CC BY 3.0</a></span>
     <span>•</span>
     <span><a href="https://github.com/tznind/dw" target="_blank" style="color: #007bff; text-decoration: none; display: inline-flex; align-items: center;"><img width="12" height="12" alt="GitHub logo" src="https://github.com/user-attachments/assets/d45893e9-0b26-4259-8764-a9737ee1426e" style="margin-right: 3px; background: #000; border-radius: 50%; padding: 1px;" /> Código Fuente</a></span>
+    <label for="language-selector">Language:</label>
+    <select id="language-selector" style="display: none;" data-languages="🇪🇸 es">
+          <option value="">Default</option>
+        </select>
   </div>
 
   <!-- Validation warning indicator (upper right, subtle) -->
@@ -182,6 +186,9 @@
 
 <!-- Main application -->
 <script src="main.js"></script>
+
+<!-- Language selector -->
+<script src="language-selector.js"></script>
 
 </body>
 </html>
